// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile/> render with default/require d props 1`] = `
<Link
  className="tile "
  to="//example.com"
/>
`;

exports[`<Tile/> render with optional props [::className] as "{{className}}" 1`] = `
<Link
  className="tile {{className}}"
  to="//example.com"
/>
`;

exports[`<Tile/> render with optional props [::data-cy] as "{{data-cy}}" 1`] = `
<Link
  className="tile "
  data-cy="{{data-cy}}"
  to="//example.com"
/>
`;
